--- a/src/stilos.css
+++ b/src/stilos.css
@@ -35,22 +35,33 @@ place-items: center;
 
 
 #tarea{
-margin-left:80%;
+margin-left:78%;
 margin-top: -90px;
 font-size: 25px;
 
 }
 
-.contenedorTop{
+.contenedorAbajo{
 border: 2px solid black;
 width: 98%;
 height: 500px;
 margin-left: 10px;
 margin-top: 80px;
-border-radius: 20px ;
+border-radius: 20px;
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+overflow: scroll;
 }
 
+.contenedorAbajo > div{
+width: 90%;
+height: 40px;
+background-color: blue;
+margin-left: 5%;
 
+
+}
 
 
 
