--- a/src/stilos.css
+++ b/src/stilos.css
@@ -31,6 +31,7 @@ text-align: center;
 margin-top: -100px;
 display: grid;
 place-items: center;
+font-size: 50px;
 }
 
 
@@ -82,8 +83,11 @@ margin-top: -30px;
 margin-left: 98%;
 margin-top: -2px;
 
-
 }
 
 
+.styleBtn{
 
+
+    
+}
