--- a/src/stilos.css
+++ b/src/stilos.css
@@ -57,37 +57,60 @@ overflow: auto;
 
 
 .crearDiv{
-width: 90%;
-height: 60px;
+width: 96%;
+height: 50px;
+margin-left: 2%;
 background-color: rgb(212, 212, 212);
-margin-left: 5%;
-margin-top: 1.5%;
-border:  solid 2px black;
+display: grid;
+grid-template-columns: 5% 85% 5% 5%;
 border-radius: 10px;
+border: 2px solid rgba(0, 0, 0, 0.711);
+margin-top: 2%;
+margin-bottom: 2%;
 }
 
 .check{
-width: 27px;
-height: 27px;
-margin-top: 15px;
-margin-left: 10px;
+width: 40px;
+height: 20px;
 }
 
 .parrafo{
 font-size: 27px;
-margin-left: 500px;
-margin-top: -30px;
+margin-top: -2px;
+margin-left: 60px;
 }
 
 .spanStyle{
-margin-left: 98%;
-margin-top: -2px;
+
+font-size: 40px;
 
 }
 
 
-.styleBtn{
-
-
-    
+.styleInput{
+margin-left: -100px;
+height: 30px;
+border: none;
+background-color: transparent;
 }
+
+#editarTarea{
+font-size: 50px;
+font-style: oblique ;
+margin-left: 40%;
+margin-top: -400px;
+}
+
+
+
+#botonn{
+height: 50px;
+
+}
+
+
+
+
+
+
+
